--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header>
         <h1 class="title"><a href="https://www.linkedin.com/in/benjaminlhsu/">Ben Hsu</a></h1>
-        <p class="subtitle">Son, Brother, Friend, and Entrepreneur.</p>
+        <p class="subtitle">Kinship, Friendship, and Entrepreneurship.</p>
         <p class="subtitle">The world is a museum of passion projects.</p>
     </header>
 </body>
